# Mypy-test

./: .env.example  .env.test  Makefile  docker-compose.test.yml  docker-compose.yml  generate_configs.py  main.py  models.py  pyproject.toml  settings.py  startup.sh
.github/workflows/: ci.yml
dependencies/: project_operations.py  user_operations.py
deploying/: resume-builder-api-fastapi.servise.j2
migrations/: env.py
migrations/versions/: 713e40174ad2_db_setup.py  e766ea3944e3_creating_user_and_project_tables.py
routes/: project_routes.py  user_routes.py
schemas/: common.py  project_schemas.py  user_schemas.py
utils/: logger.py
